@@ -2,7 +2,9 @@ Revision history for libev, a high-performance and full-featured event loop.
 
 TODO: signal mask problem documentation
 TODO: ev_loop_wakeup
+TODO: windows handle caching, added/not removed in ev_select.c
 	- do no rely on ceil() in ev_e?poll.c.
+        - backport libev to HP-UX versions before 11 v3.
 
 4.03 Tue Jan 11 14:37:25 CET 2011
 	- officially support polling files with all backends.
